--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "main": "src/index.js",
   "dependencies": {
+    "node-sass-chokidar": "0.0.3",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-kawaii": "^0.1.6",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
