--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "main": "src/index.js",
   "dependencies": {
     "node-sass-chokidar": "0.0.3",
+    "qrcode.react": "^0.7.2",
+    "query-string": "^5.0.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-kawaii": "^0.1.6",
