--- a/client/package.json
+++ b/client/package.json
@@ -4,23 +4,34 @@
   "private": true,
   "main": "src/index.js",
   "dependencies": {
-    "node-sass-chokidar": "0.0.3",
-    "qrcode.react": "^0.7.2",
-    "query-string": "^5.0.1",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-kawaii": "^0.1.6",
-    "react-redux": "^5.0.6",
-    "react-scripts": "1.0.17",
-    "redux": "^3.7.2",
-    "reselect": "^3.0.1",
-    "shortid": "^2.2.8",
-    "socket.io-client": "^2.0.4"
+    "qrcode.react": "^1.0.0",
+    "query-string": "^6.9.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-kawaii": "^0.14.4",
+    "react-redux": "^7.1.3",
+    "react-scripts": "^3.3.0",
+    "redux": "^4.0.4",
+    "reselect": "^4.0.0",
+    "shortid": "^2.2.15",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
