--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "main": "index.js",
   "dependencies": {
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.3.0",
+    "uuid": "^3.3.3"
   },
   "scripts": {
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
