--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,9 @@
 {
   "name": "avalon-server",
-  "version": "0.1.0",
   "private": true,
   "main": "index.js",
   "dependencies": {
-    "socket.io": "^2.3.0",
-    "uuid": "^3.3.3"
+    "socket.io": "^2.3.0"
   },
   "scripts": {
     "start": "node .",
