--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "main": "src/index.js",
   "dependencies": {
+    "project-name-generator": "^2.1.7",
     "qrcode.react": "^1.0.0",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
@@ -12,7 +13,6 @@
     "react-scripts": "^3.3.0",
     "redux": "^4.0.4",
     "reselect": "^4.0.0",
-    "shortid": "^2.2.15",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
